Possible horizontal scroll fix.

--- a/assets/stylesheets/globals/_base.scss
+++ b/assets/stylesheets/globals/_base.scss
@@ -1,5 +1,7 @@
 html {
 
+    overflow-x: hidden;
+
     aside {
         position: absolute;
         z-index: 9500;
